Fix layout issues in Membership-Overview page

--- a/app/assets/css/ms-admin.css
+++ b/app/assets/css/ms-admin.css
@@ -18,6 +18,7 @@
 /* Define general layout states */
 .ms-wrap {
   margin: 10px 20px 0 2px;
+  position: relative;
 }
 .ms-wrap input,
 .ms-wrap select,
@@ -839,6 +840,7 @@
 .select2-drop {
   overflow: hidden;
   border-radius: 0 0 3px 3px;
+  max-width: 80%;
 }
 
 /* When a thickbox window is open make sure the select2-dropdown is visible */
@@ -1582,6 +1584,41 @@
 }
 .ms-wrap .ms-trial-wrapper {
   margin-top: 15px;
+}
+
+/* Membership Details ("Overview" page) */
+.ms-wrap .ms-membership-status-wrapper {
+  position: absolute;
+  padding: 10px;
+  left: 0;
+  top: 10px;
+  background-color: #FFF;
+  min-width: 180px;
+  text-align: center;
+}
+.ms-wrap .ms-membership-status-wrapper .wpmui-radio-slider {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5px;
+}
+.ms-wrap .ms-membership-status-wrapper .ms-membership-status > div {
+  display: block;
+}
+.ms-wrap .ms-membership-status-wrapper .ms-membership-status .ms-active {
+  display: none;
+}
+.ms-wrap .ms-membership-status-wrapper .ms-membership-status.ms-active > div {
+  display: none;
+}
+.ms-wrap .ms-membership-status-wrapper .ms-membership-status.ms-active .ms-active {
+  display: block;
+}
+
+/* Protected Content page */
+.ms-wrap .ms-more-tag {
+  display: inline-block;
+  margin: 0 20px 0 0;
 }
 
 /**
