--- a/app/assets/css/sass/_styles_forms.scss
+++ b/app/assets/css/sass/_styles_forms.scss
@@ -340,6 +340,7 @@
 .select2-drop {
 	overflow: hidden;
 	border-radius: 0 0 3px 3px;
+	max-width: 80%;
 }
 
 /* When a thickbox window is open make sure the select2-dropdown is visible */
