--- a/app/assets/css/sass/_styles_general.scss
+++ b/app/assets/css/sass/_styles_general.scss
@@ -11,6 +11,7 @@
 /* Define general layout states */
 .ms-wrap {
 	margin: 10px 20px 0 2px;
+	position: relative;
 
 	input,
 	select,
